# signal_crypto_lib

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: DART_API_REFERENCE.md  DART_BINDING_GUIDE.md  README.md  X3DH.md  api_reference.md  complete_implementation_summary.md  developer_guide.md  developer_guide_part2.md  final_implementation_summary.md  implementation_plan.md  implementation_summary.md  phase6_enterprise_deployment_summary.md  phase7_ai_ml_integration_summary.md  phase8_quantum_cryptography_summary.md  phase9_next_gen_technologies_summary.md  signal_protocol_analysis.md  signal_protocol_for_kids.md
example/: README.md  build_and_test.sh  dart_example.dart
flutter_signal_chat/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
flutter_signal_chat/.dart_tool/: package_config.json  package_config_subset
src/: advanced.rs  ai_ml.rs  api.rs  audit.rs  deployment.rs  double_ratchet.rs  enterprise.rs  group.rs  group_ffi.rs  group_sender_key.rs  identity.rs  integration_tests.rs  lib.rs  next_gen.rs  performance.rs  post_quantum.rs  prekey.rs  quantum.rs  recovery.rs  security.rs  session_ffi.rs  session_manager.rs  skipped_keys.rs  types.rs  x3dh.rs  x3dh_keys.rs
src/protocol/: constants.rs  double_ratchet.rs  mod.rs  sesame.rs  x3dh.rs
tests/: integration_tests.rs
tests/common/: assertions.rs  fixtures.rs  helpers.rs  mocks.rs  mod.rs
tests/integration/: error_scenarios.rs  group_messaging.rs  mod.rs  performance_integration.rs  protocol_flows.rs  security_properties.rs  session_lifecycle.rs
tests/unit/: identity.rs  (+8 more)
(+2 files in other folders)
