[package]
name = "signal_crypto_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
serde_cbor = "0.11"
hex = "0.4"
# Session storage and management
rusqlite = { version = "0.30", features = ["bundled", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
bincode = "1.3"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

# Security dependencies
hmac = "0.12"

# Advanced features dependencies
flate2 = "1.0"

# Enterprise features dependencies
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
ffi = []